fix issue where too many images would break the layout of an individual horse

--- a/client/web/src/App.css
+++ b/client/web/src/App.css
@@ -241,12 +241,14 @@ main {
     margin-top: 20px;
     margin-left: 20px;
   }
+  .image-gallery {
+    width: 100vw !important;
+  }
 }
 
 .image-gallery {
   grid-area: gallery;
-  justify-self: center;
-  max-width: 100vw;
+  width: 50vw;
 }
 
 .ad-details {
